Fatema[5]:fixed header spacing

--- a/client/src/Styles/Header.css
+++ b/client/src/Styles/Header.css
@@ -2,22 +2,23 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
+  padding: 10px 15px;
   background-color: #0d0d24;
 }
 
 .logo {
   width: 15vw;
   height: auto;
-  margin-right: 25px;
+  margin-right: 15px;
 }
 
 .nav-links {
   display: flex;
   gap: 20px;
   flex: 1;
-  justify-content: center;
+  justify-content: flex-start;
   font-family: 'Georgia', serif;
+  margin-left: 15vw;
 }
 
 .nav-links a {
